<resources>
    <string name="app_name">PayCam</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="enter_start_date">Enter start date</string>
    <string name="enter_end_date">Enter end date</string>
    <string name="all">All</string>
    <string name="action_filter">Filter</string>
    <string name="select_filter_period_date">Select priod date you want to fillter by :</string>
    <string name="apply">Apply</string>
    <string name="cancel">Cancel</string>
    <string name="selectCorrectDatePreiod">Please select both start and end date </string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="show">show</string>
    <string name="forget_pass">forget password</string>
    <string name="newuser">new user</string>
    <string name="register">sign up</string>
    <string name="enter_your_data">Enter your data to login</string>
    <string name="splash_text">PayCam application</string>
    <string name="confirmPrint">You chose %1$s product from %2$s . Do you really want to print this bill ?!</string>
    <string name="enter_quontity">Enter  quantity you want :</string>
    <string name="quantity">quantity ...</string>
    <string name="Daitail">Details</string>
    <string name="All_items">All Items</string>
    <string name="print_done">Your bill printed sucssesfuly you can take it now</string>
    <string name="ok">ok</string>
    <string name="reprint">Reprint</string>
    <string name="pice">pice</string>
    <string name="summary">Summary</string>
    <string name="print">Print</string>
    <string name="bill_code">Bill Code</string>
    <string name="Confirmation">Confirmation</string>
</resources>
