<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@drawable/nofill_primary"
    android:layout_height="wrap_content">
<ImageView
    android:id="@+id/icon"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:layout_centerHorizontal="true"
    android:src="@drawable/shield"
    android:tint="@color/colorPrimary"/>
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_done"
        android:layout_below="@+id/icon"
        android:textColor="@color/colorGrayDark"
        android:textSize="25dp"
        android:padding="10dp"
        android:gravity="center"/>
<LinearLayout
    android:id="@+id/code_lin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/text"
    android:padding="10dp"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginBottom="12dp"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_code"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:layout_marginEnd="12dp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="012457891224112312"
        android:textColor="@color/colorGrayDark"
        android:textSize="25dp"
        android:gravity="center"/>
</LinearLayout>
    <Button
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/code_lin"
        android:background="@drawable/nofill_primary"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="@string/ok"
        android:textColor="@color/colorPrimary"/>
</RelativeLayout>