<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/nofill_primary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/select_filter_period_date"
                android:textSize="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimary"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/nofill_primary"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:layout_gravity="center"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_date_range_whgit_24dp"
                    android:tint="@color/colorPrimary" />

                <EditText
                    android:id="@+id/start_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="#ffff"
                    android:focusable="false"
                    android:gravity="start"
                    android:hint="@string/enter_start_date"
                    android:inputType="date"
                    android:padding="4dp"
                    android:singleLine="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:background="@drawable/nofill_primary"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_date_range_whgit_24dp"
                    android:tint="@color/colorPrimary" />

                <EditText
                    android:id="@+id/end_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:background="#ffff"
                    android:focusable="false"
                    android:gravity="start"
                    android:hint="@string/enter_end_date"
                    android:inputType="date"
                    android:padding="4dp"
                    android:singleLine="true" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                >
                <LinearLayout
                    android:id="@+id/btnOk"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/solid_back_primary"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/apply"
                        android:textColor="@color/colorWgiht"
                        android:textSize="18dp"
                        android:padding="8dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/btnNo"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:background="@drawable/nofill_primary"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/cancel"
                        android:textColor="@color/colorPrimary"
                        android:textSize="18dp"
                        android:padding="8dp"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>