<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.view.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:orientation="vertical"
        android:padding="8dp">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:tint="@color/colorPrimary"
            android:src="@drawable/logo" />

        <View
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/enter_your_data"
            android:textAlignment="center"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
            android:textSize="20sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:gravity="left"
                android:text=" *"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/red_300"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nofill_primary"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="50"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorGray" />

        <View
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="center"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:gravity="left"
                    android:text=" *"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                    android:textColor="@color/red_300"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:gravity="end"
                android:onClick="show_pass"
                android:text="@string/show"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:textColor="@color/red_300"
                android:textSize="12sp" />

        </LinearLayout>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/nofill_primary"
            android:gravity="center"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="50"
            android:maxLines="1"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/colorGray" />

        <!--<View-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="12dp" />-->

        <!--<TextView-->
        <!--android:id="@+id/forgot_password"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="end"-->
        <!--android:layout_marginTop="12dp"-->
        <!--android:clickable="true"-->
        <!--android:onClick="go_forgetpass_screen"-->
        <!--android:text="@string/forget_pass"-->
        <!--android:textSize="14sp"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
        <!--android:textColor="@color/red_300"-->
        <!--/>-->

        <View
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/solid_back_primary"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/colorWgiht"
            android:textSize="17sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="12dp" />

        <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:gravity="center"-->
        <!--android:orientation="horizontal">-->

        <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:text="@string/newuser"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
        <!--android:textColor="@color/colorGray"-->
        <!--android:textSize="14sp" />-->

        <!--<TextView-->
        <!--android:id="@+id/sign_up"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1"-->
        <!--android:clickable="true"-->
        <!--android:gravity="right"-->
        <!--android:onClick="go_signup_screen"-->
        <!--android:text="@string/register"-->
        <!--android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"-->
        <!--android:textColor="@color/colorPrimary"-->
        <!--android:textSize="16sp"-->
        <!--/>-->

        <!--</LinearLayout>-->


    </LinearLayout>


</RelativeLayout>